# autogit

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  README.md  README_EN.md  autogit.service.in  compile_flags.txt
.github/workflows/: Build.yml
autogit/: CMakeLists.txt
autogit/include/autogit/: coroyield.hpp  logging.hpp  scoped_exit.hpp  strutil.hpp  time_clock.hpp
autogit/include/watchman/: notify_event.hpp  watchman.hpp
autogit/include/watchman/linux/: linux_watchman.hpp
autogit/include/watchman/macos/: macos_watchman.hpp
autogit/include/watchman/windows/: windows_watchman.hpp
autogit/src/: main.cpp
docs/: autogit.sh
incubator/: CMakeLists.txt  README.md
incubator/dirmon/: CMakeLists.txt  README.md  test.cpp
incubator/dirmon/include/dirmon/: change_notify.hpp  dirmon.hpp
incubator/dirmon/include/dirmon/linux/: fanotify_dirmon.hpp  inotify_dirmon.hpp
incubator/dirmon/include/dirmon/windows/: win_dirchange_read_handle.hpp  windows_dirmon.hpp
incubator/dirmon/src/: dirmon.cpp
incubator/gitpp/: CMakeLists.txt
incubator/gitpp/include/gitpp/: gitpp.hpp  lfs.hpp
incubator/gitpp/src/: gitpp.cpp  lfs.cpp
incubator/httpc/: CMakeLists.txt
incubator/httpc/include/httpc/: httpc.hpp
incubator/httpc/src/: httpc.cpp
incubator/httpd/: CMakeLists.txt  README.md
incubator/httpd/include/httpd/: acceptor.hpp  header_helper.hpp  http_misc_helper.hpp  http_stream.hpp  httpd.hpp  ssl_acceptor.hpp  unix_acceptor.hpp  wait_all.hpp
incubator/httpd/include/httpd/detail/: async_map.hpp  concepts.hpp  config.hpp  parser.hpp  time_clock.hpp  wait_all.hpp
incubator/httpd/src/: header_helper.cpp  http_misc_helper.cpp  httpd.cpp
